<resources>
    <string name="shuffle">Shuffle</string>
    <string name="app_name">RealPlayer</string>
    <string name="nowPlaying">Now Playing</string>
    <string name="file">File</string>
    <string name="view">View</string>
    <string name="play">Play</string>
    <string name="favorites">Favorites</string>
    <string name="tools">Tools</string>
    <string name="help">Help</string>
    <string name="music">Music</string>
    <string name="video">Video</string>
    <string name="photos">Photos</string>
    <string name="videos">Videos</string>
    <string name="corruptImage">Please delete the corrupt image and start the slideshow again</string>
    <string name="tasks">TASKS</string>
    <string name="playAll">Play All</string>
    <string name="scanForMedia">Scan For Media</string>
    <string name="song">\u0020song</string>
    <string name="Nsongs">\u0020songs</string>
    <string name="album">\u0020album</string>
    <string name="Nalbums">\u0020albums</string>
    <string name="albumsongseparator">,</string>
    <string name="playback_failed">Sorry, the player does not support this type of audio file.</string>
    <string name="unknown_album_name">Unknown album</string>
    <string name="unknown_artist_name">Unknown artist</string>
    <string name="unknown_genre_name">Unknown genre</string>
    <string name="notification_artist_album">notification_artist_album</string>
    <string name="queue">Current playlist</string>
    <string name="new_playlist">New</string>
    <string name="NNNtracksdeleted">songs were deleted</string>
    <string name="NNNtrackstoplaylist">songs were added to playlist</string>
    <string name="sdcard_missing_title">No SD card</string>
    <string name="sdcard_missing_message">No SD card.</string>
    <string name="sdcard_busy_title">SD card is busy</string>
    <string name="sdcard_busy_message">Sorry, your SD card is busy.</string>
    <string name="sdcard_error_title">SD card error</string>
    <string name="sdcard_error_message">SD card error.</string>
    <string name="emptyplaylist">Selected playlist is empty.</string>
    <string name="durationformat">%2$d:%5$02d</string>
    <string name="ringtone_set">\"%s\" set as phone ringtone.</string>
    <string name="tracks_title">Songs</string>
    <string name="no_tracks_title">No songs</string>
    <string name="nowplaying_title">Now playing</string>
    <string name="partyshuffle_title">Party shuffle</string>
    <string name="loading_video">Loading video…</string>
    <string name="resume_playing_title">Resume video</string>
    <string name="resume_playing_message">Resume playing from %s ?</string>
    <string name="resume_playing_resume">Resume playing</string>
    <string name="resume_playing_restart">Start over</string>
    <string name="appDescriptions">Helix DNA powered multimedia player</string>
    <string name="songs">Songs</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="genres">Genres</string>
    <string name="ratings">Ratings</string>
    <string name="most_played">Most Played</string>
    <string name="most_played2">Most\nPlayed</string>
    <string name="recently_added">Recently Added</string>
    <string name="recently_added2">Recently\nAdded</string>
    <string name="my_playlist">My Playlist</string>
    <string name="my_playlist2">My\nPlaylist</string>
    <string name="all_songs">All Songs</string>
    <string name="five_stars">5 Stars</string>
    <string name="four_stars">4 Stars</string>
    <string name="three_stars">3 Stars</string>
    <string name="two_stars">2 Stars</string>
    <string name="one_star">1 Star</string>
    <string name="no_stars">No Stars</string>
    <string name="to_be_done">To Be Done</string>
    <string name="sldShow">Slide Show</string>
    <string name="strtMusic">Start Music</string>
    <string name="rotate">Rotate</string>
    <string name="rtLft">Rotate Left</string>
    <string name="rtRgh">Rotate Right</string>
    <string name="setAs">Set As</string>
    <string name="setin">Settings</string>
    <string name="aboutRealPlayer">About RealPlayer</string>
    <string name="realPlayerEulaLicense">RealPlayer End User License Agreement</string>
    <string name="realPlayerForAndroid">RealPlayer for Android</string>
    <string name="realPlayerEmail">RealPlayer.Android@gmail.com</string>
    <string name="pref_general_settings">General settings</string>
    <string name="pref_slideshow_category">Slideshow settings</string>
    <string name="pref_gallery_sort_title">Picture sort</string>
    <string name="pref_gallery_sort_summary">Select the sort order of pictures</string>
    <string name="pref_gallery_sort_dialogtitle">Picture sort</string>
    <string name="default_value_pref_gallery_sort">ascending</string>
    <string name="pref_gallery_slideshow_interval_title">Slideshow interval</string>
    <string name="pref_gallery_slideshow_interval_summary">Select how long each slide displays in the show</string>
    <string name="pref_gallery_slideshow_interval_dialogtitle">Slideshow interval</string>
    <string name="default_value_pref_gallery_slideshow_interval">5</string>
    <string name="pref_gallery_slideshow_transition_title">Slideshow transition</string>
    <string name="pref_gallery_slideshow_transition_summary">Select the effect used when moving from one slide to the next</string>
    <string name="pref_gallery_slideshow_transition_dialogtitle">Slideshow transition</string>
    <string name="default_value_pref_gallery_slideshow_transition">4</string>
    <string name="pref_gallery_slideshow_repeat_title">Repeat slideshow</string>
    <string name="pref_gallery_slideshow_repeat_summary">Play slideshow more than once</string>
    <string name="pref_gallery_slideshow_repeat_dialogtitle">Repeat slideshow?</string>
    <string name="pref_gallery_slideshow_shuffle_title">Shuffle slides</string>
    <string name="pref_gallery_slideshow_shuffle_summary">Show pictures in random order</string>
    <string name="pref_gallery_slideshow_shuffle_dialogtitle">Shuffle pictures?</string>
    <string name="wall_wait">Setting wallpaper, please wait</string>
    <string name="sort">sort</string>
    <string name="delete">Delete</string>
    <string name="pref_confirm_delete_summary">Showing Confirmation before deleting a picture</string>
    <string name="pref_gallery_confirm_delete">Confirm Delete</string>
    <string name="delete_prompt_msg">The picture will be deleted</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="resume_slide">Resume Slide Show</string>
    <string name="restart">Restart</string>
    <string name="edit_image">Edit Photo</string>
    <string name="crop_save_text">Save</string>
    <string name="crop_discard_text">Discard</string>
    <string name="preparing_sd">Preparing SD card…</string>
    <string name="no_storage">Please insert an SD card before using the camera.</string>
    <string name="not_enough_space">Your SD card is full.</string>
    <string name="runningFaceDetection">Please wait…</string>
    <string name="savingImage">Saving picture…</string>
    <string name="multiface_crop_help">Tap a face to begin.</string>
    <string name="noTracks">No Tracks to play</string>
    <string name="imageChangeInformation">Slide finger to scroll through pictures</string>
    <string name="loading_pictures">Loading pictures please wait...</string>
    <string name="dmgr">Download Manager</string>
    <string name="streaming">Streaming</string>
    <string name="stream">Stream Audio/Video</string>
    <string name="downloadPriority">Download Priority</string>
    <string name="savedLocation">Saved Location</string>
    <string name="remove_download">Remove Download</string>
    <string name="startDownload">Start Download</string>
    <string name="pauseDownload">Pause Download</string>
    <string name="resumeDownload">Resume Download</string>
    <string name="removeDownload">Remove Download</string>
    <string name="cancelDownload">Cancel Download</string>
    <string name="resetDownload">Reset Download</string>
    <string name="details">Details</string>
    <string name="autoDownload">Set to Auto Download</string>
    <string name="manualDownload">Set to Manual Download</string>
    <string name="clear_downloads">Clear Downloads</string>
    <string name="reset_cancFailed">Reset Cancelled/Failed</string>
    <string name="clear_completed">Clear Completed</string>
    <string name="clear_cancelled">Clear Cancelled</string>
    <string name="clear_failed">Clear Failed</string>
    <string name="reset_streamingOption">Reset Streaming Option</string>
    <string name="selectDelete">Select which you want to delete from the list</string>
    <string name="pref_dmgr">Download Settings</string>
    <string name="pref_dmgr_autoDownload_title">Automatic Download(Wifi Only)</string>
    <string name="pref_dmgr_autoDownload_summary">Automatically starts the download when the network is connected</string>
    <string name="pref_dmgr_activeDownloads_title">Active Downloads</string>
    <string name="pref_dmgr_activeDownloads_summary">Select the Number of Active Simultaneous Downloads Allowed</string>
    <string name="pref_dmgr_activeDownloads_dialogtitle">Active Downloads</string>
    <string name="default_value_pref_dmgr_activeDownloads">1</string>
    <string name="pref_dmgr_clearCompleted_title">Clear Completed</string>
    <string name="pref_dmgr_clearCompleted_summary">Automatically clear the Completed Downloads</string>
    <string name="pref_dmgr_notify_title">Notify</string>
    <string name="pref_dmgr_notify_summary">Notify when the download completes</string>
    <string name="alphabet">\u0020ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="recently_ad_settings">Recently Added Settings</string>
    <string name="pref_recently_ad_title">Recently Added</string>
    <string name="pref_recently_ad_summary">Choose the session time</string>
    <string name="pref_recently_ad_dialogtitle">Recently Added Options</string>
    <string name="default_value_recently_ad">0</string>
    <string name="playback">Playback</string>
    <string name="download">Download</string>
    <string name="playbackDownload">Playback and Download</string>
    <string name="use_by_default">Use by default for this Action</string>
    <string name="info_reset_streaming">You can reset this option from DownloadManager Settings</string>
    <string name="reportingText">Participate in Customer Experience Improvement Program</string>
    <string name="reportingInfoText">We are always looking to improve RealPlayer and could use your help. \u0020By joining the Customer Experience Improvement Program you will allow us to collect information about how you interact with RealPlayer. \u0020All the information is anonymous.</string>
    <string name="customerSupportText">\'<a href="http://real.custhelp.com/app/answers/list/p/3/c/2299/catname/Mobile+Application">CustomerSupport</a>\'</string>
    <string name="copyrightEula">Copyright (c) 1995-2011</string>
    <string name="copyrightText">(c) 2011 Realnetworks, Inc. All Rights Reserved.</string>
    <string name="storageAndFolders">Storage and Folders</string>
    <string name="playbackByFolder">Playback by Folder</string>
    <string name="playbackFolderSummary">Select folder to playback</string>
    <string name="photoImportTitle">Picture Folders</string>
    <string name="photoImportSummary">Choose folders containing your pictures</string>
</resources>